<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"> </string>
    <string name="app_name_main"></string>
    <string name="app_name_second"></string>
    <string name="app_head_title"></string>
    <string name="login">登录</string>
    <string name="remeber_pwd">  记住密码</string>
    <string name="hint_user">请输入用户名</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="set_url">地址设置</string>
    <string name="help">系统帮助</string>
    <string name="login_footer"></string>
    <string name="technical_support"></string>
</resources>
