<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name_main"
        android:textColor="@color/login_blue"
        android:textSize="30sp"
        android:textStyle="bold" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name_second"
        android:textColor="@color/black"
        android:textSize="18sp"
       />
    
    
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp" />
 
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
    >
    
    <ImageView 
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/user"
        />
    
    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/hint_user"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:textColorHint="@color/login_hint"
        android:layout_gravity="center_horizontal" />
    
</LinearLayout>
    <include layout="@layout/divider_gray_1dp"/>
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    >

      <ImageView 
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/user"
        />
    
    <EditText
        android:id="@+id/et_login_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/login_hint" />
</LinearLayout>
<include layout="@layout/divider_gray_1dp"/>
    <CheckBox
        android:id="@+id/cb_remeber_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:text="@string/remeber_pwd"
        android:textColor="@color/login_hint"
        android:checked="true"
        android:paddingLeft="10dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:background="@color/login_blue"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="20sp" />

   
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/seturl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/set_url"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <!--
             <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="|"
            android:padding="10dp"
            android:textColor="@color/white" />
        -->

        <TextView
            android:id="@+id/sethelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>

     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        ></LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
       
        >
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_footer"
            android:textColor="@color/gray_text"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            />
        
         <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/technical_support"
            android:textColor="@color/gray_text"
            android:textSize="12sp"
            android:gravity="center_horizontal"
             android:visibility="gone"
            />
        
    </LinearLayout>
    
</LinearLayout>